add the ability to 'delete' songs

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -7,7 +7,7 @@
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 5000,
-      "backgroundColor": "#28a745"
+      "backgroundColor": "#ffffffff"
     }
   }
 }
